fixed bg image tiling on mobile and pagination styles

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -299,6 +299,11 @@ div {
     box-shadow: inset 0 0 15px rgba(0,0,0,.5);
     text-align: center;
 }
+@media (max-width: 30em) {
+  .preview-hero {
+    height: 100px;
+  }
+}
 
 .preview-title {
   margin-left:  auto;
@@ -548,17 +553,20 @@ tbody tr:nth-child(odd) th {
 /* Pagination items can be `span`s or `a`s */
 .pagination-item {
   display: block;
-  padding: 1rem;
+  padding: 0.5rem;
   border: 1px solid #ccc;
   background-color: #003366;
   color: white;
   font-weight: 600;
+  width: 50%;
+  float: left;
 }
 .pagination-item:first-child {
   margin-bottom: -1px;
 }
-.pagination-item span {
-    background-color: black;
+span.pagination-item {
+    background-color: #ccc;
+    opacity: 0.5;
 }
 
 /* Only provide a hover state for linked pagination items */
@@ -567,13 +575,6 @@ a.pagination-item:hover {
 }
 
 @media (min-width: 30em) {
-/*  .pagination {
-    margin: 3rem 0;
-  }*/
-  .pagination-item {
-    float: left;
-    width: 50%;
-  }
   .pagination-item:first-child {
     margin-bottom: 0;
     border-top-left-radius:    4px;
